--- a/ethereum_yellow_paper_cn.tex
+++ b/ethereum_yellow_paper_cn.tex
@@ -1278,9 +1278,9 @@ Ethash 是以太坊 1.0 的 PoW 算法。它是 Dagger-Hashimoto 的最新版本
 
 \section{文档获取}
 
-本文的英文源文件维护在 \url{https://github.com/ethereum/yellowpaper}。一个自动生成的英文 PDF 文件在 \url{https://ethereum.github.io/yellowpaper/paper.pdf}。
+本文的英文源文件维护在 \url{https://github.com/ethereum/yellowpaper},一个自动生成的英文 PDF 文件链接为 \url{https://ethereum.github.io/yellowpaper/paper.pdf} 。
 
-本文的中文源文件维护在 \url{https://github.com/riversyang/ethereum_yellowpaper}，一个自动生成的中文 PDF 文件可在此工程的 Releases 下找到。此工程 forked from \url{https://github.com/yuange1024/ethereum_yellowpaper}。（本段由校订人添加。）
+本文的中文源文件维护在 \url{https://github.com/yuange1024/ethereum_yellowpaper}，一个自动生成的中文 PDF 文件链接为 \url{https://github.com/yuange1024/ethereum_yellowpaper/blob/master/ethereum_yellow_paper_cn.pdf} 。
 
 \bibliographystyle{plainnat}
 \bibliography{Biblio}
